--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'commons-validator:commons-validator:1.9.0'
+    implementation 'org.apache.commons:commons-lang3:3.18.0'
     implementation 'com.fasterxml.uuid:java-uuid-generator:5.1.0'
     implementation 'io.hypersistence:hypersistence-tsid:2.1.4'
     implementation 'org.modelmapper:modelmapper:3.2.4'
