--- a/build.gradle
+++ b/build.gradle
@@ -28,17 +28,24 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+
     implementation 'commons-validator:commons-validator:1.9.0'
-    implementation 'org.apache.commons:commons-lang3:3.18.0'
     implementation 'com.fasterxml.uuid:java-uuid-generator:5.1.0'
-    implementation 'io.hypersistence:hypersistence-tsid:2.1.4'
     implementation 'org.modelmapper:modelmapper:3.2.4'
-    runtimeOnly 'com.h2database:h2'
+    implementation 'org.apache.commons:commons-lang3:3.18.0'
+    testImplementation 'org.assertj:assertj-core:3.27.3'
+
+    runtimeOnly 'org.postgresql:postgresql'
+    implementation 'org.flywaydb:flyway-core'
+    implementation 'org.flywaydb:flyway-database-postgresql'
+
     compileOnly 'org.projectlombok:lombok'
+    runtimeOnly 'com.h2database:h2'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'org.assertj:assertj-core:3.27.3'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
     mockitoAgent('org.mockito:mockito-core:5.14.2') {transitive = false}
 }
 
