--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -16,3 +16,11 @@ spring:
     hibernate:
       ddl-auto: create-drop
     show-sql: 'true'
+
+algashop:
+  integrations:
+    payment:
+      provider: FASTPAY
+      fastpay:
+        hostname: http://localhost:9995
+        private-token: SSEewtC6Ps5yJLdB6SJmh1bqJXgRbCdf8ocDj2hU
