--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -4,15 +4,25 @@ spring:
   application:
     name: billing
   datasource:
-    url: 'jdbc:h2:mem:~/billing-test;DATABASE_TO_LOWER=TRUE;CASE_INSENSITIVE_IDENTIFIERS=TRUE'
-    username: sa
-    password: '123'
-  h2:
-    console:
-      enabled: 'true'
-      settings.web-allow-others: 'true'
+    url: jdbc:postgresql://localhost:5432/billing_test
+    username: postgres
+    password: postgres
   jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
-      ddl-auto: create-drop
-    show-sql: 'true'
+      ddl-auto: none
+    show-sql: true
+  flyway:
+    enabled: true
+    locations: classpath:db/migration
+    user: postgres
+    password: postgres
+    url: jdbc:postgresql://localhost:5432/billing_test
+
+algashop:
+  integrations:
+    payment:
+      provider: FASTPAY #FAKE
+      fastpay:
+        hostname: http://localhost:9995
+        private-token: SSEewtC6Ps5yJLdB6SJmh1bqJXgRbCdf8ocDj2hU
+        public-token: tDBmh0ZiDrmaZ8BVQD7i9UYdcj9KtZUk
