--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -9,10 +9,10 @@ spring:
     password: postgres
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: create-drop
     show-sql: true
   flyway:
-    enabled: true
+    enabled: false
     locations: classpath:db/migration
     user: postgres
     password: postgres
